fixes spacing between secondary nav elements

--- a/app/assets/stylesheets/platform.sass
+++ b/app/assets/stylesheets/platform.sass
@@ -185,4 +185,4 @@
     flex-direction: column
 
     .nav-link
-      line-height: .55rem
+      line-height: .6rem
